--- a/res/css/views/elements/_Dropdown.scss
+++ b/res/css/views/elements/_Dropdown.scss
@@ -17,19 +17,23 @@ limitations under the License.
 .mx_Dropdown {
     position: relative;
     color: $primary-content;
+    caret-color: $accent;
 }
 
 .mx_Dropdown_disabled {
     opacity: 0.3;
 }
 
-.mx_Dropdown_input {
+.mx_Dropdown_input,
+.mx_Dropdown_input input {
     display: flex;
     align-items: center;
     position: relative;
-    border-radius: 4px;
+    border-radius: 8px;
     border: 1px solid $strong-input-border-color;
-    font-size: $font-12px;
+    padding: $spacing-8 $spacing-12;
+    font-size: $font-15px;
+    line-height: $font-24px;
     user-select: none;
 }
 
@@ -38,7 +42,7 @@ limitations under the License.
 }
 
 .mx_Dropdown_input:focus {
-    border-color: $accent-alt;
+    border-color: $accent;
 }
 
 /* Disable dropdown highlight on focus */
@@ -47,22 +51,21 @@ limitations under the License.
 }
 
 .mx_Dropdown_arrow {
-    width: 10px;
-    height: 6px;
-    padding-right: 9px;
+    width: 16px;
+    height: 16px;
     mask: url('$(res)/img/feather-customised/dropdown-arrow.svg');
     mask-repeat: no-repeat;
-    background: $primary-content;
+    mask-size: fill;
+    mask-position: center;
+    background-color: $tertiary-content;
 }
 
 .mx_Dropdown_option {
-    height: 35px;
-    line-height: $font-35px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: $spacing-8 $spacing-12;
 }
 
 .mx_Dropdown_input > .mx_Dropdown_option {
+    padding: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -105,24 +108,19 @@ input.mx_Dropdown_option:focus {
     position: absolute;
     left: -1px;
     right: -1px;
-    top: 100%;
+    top: calc(100% + 2.5px);
     z-index: 2;
     margin: 0;
     padding: 0px;
-    border-radius: 4px;
-    border: 1px solid $accent-alt;
+    border-radius: 8px;
+    border: 1px solid $quinary-content;
     background-color: $background;
     max-height: 200px;
     overflow-y: auto;
 }
 
-.mx_Dropdown_menu .mx_Dropdown_option {
-    height: auto;
-    min-height: 35px;
-}
-
 .mx_Dropdown_menu .mx_Dropdown_option_highlight {
-    background-color: $focus-bg-color;
+    background-color: rgba($quaternary-content, 0.2);
 }
 
 .mx_Dropdown_searchPrompt {
