Move the spinner to the center
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_VerificationPanel.scss
+++ b/res/css/views/right_panel/_VerificationPanel.scss
@@ -30,9 +30,13 @@ limitations under the License.
             width: fit-content;
         }
 
+        .mx_EncryptionInfo_spinner,
         .mx_VerificationShowSas {
             margin-inline-start: auto;
             margin-inline-end: auto;
+        }
+
+        .mx_VerificationShowSas {
             align-items: center;
         }
     }
