Align the spinner to the center
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_VerificationPanel.scss
+++ b/res/css/views/right_panel/_VerificationPanel.scss
@@ -36,6 +36,7 @@ limitations under the License.
             margin-inline-end: auto;
         }
 
+        .mx_Spinner,
         .mx_VerificationShowSas {
             align-items: center;
         }
