--- a/res/css/views/right_panel/_VerificationPanel.scss
+++ b/res/css/views/right_panel/_VerificationPanel.scss
@@ -25,6 +25,12 @@ limitations under the License.
 
 .mx_UserInfo.mx_BaseCard {
     .mx_UserInfo_container:not(.mx_UserInfo_separator) {
+
+        > div > p {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
         .mx_VerificationPanel_verifyByEmojiButton,
         .mx_UserInfo_wideButton {
             width: fit-content;
