--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -20,8 +20,18 @@ limitations under the License.
     margin: auto;
     border-top: 1px solid $primary-hairline-color;
     position: relative;
-    padding-left: 42px;
-    padding-right: 16px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+    padding: 16px;
+
+    .mx_MessageComposer_row {
+        flex: 1;
+    }
+
+    >[role=button] {
+        margin-bottom: 2px;
+    }
 }
 
 .mx_MessageComposer_replaced_wrapper {
@@ -56,7 +66,10 @@ limitations under the License.
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    border: 1px solid $tertiary-content;
+    border-radius: 8px;
+    padding: 8px;
+    margin-right: 16px;
 }
 
 .mx_MessageComposer .mx_MessageComposer_avatar {
@@ -73,12 +86,10 @@ limitations under the License.
 }
 
 .mx_MessageComposer_e2eIcon.mx_E2EIcon {
-    position: absolute;
-    left: 20px;
-    margin-right: 0; // Counteract the E2EIcon class
-    margin-left: 3px; // Counteract the E2EIcon class
+    margin: 0 0 2px;
     width: 12px;
     height: 12px;
+    align-self: end;
 }
 
 .mx_MessageComposer_noperm_error {
@@ -121,16 +132,22 @@ limitations under the License.
 
 // FIXME: rather unpleasant hack to get rid of <p/> margins.
 // really we should be mixing in markdown-body from gfm.css instead
-.mx_MessageComposer_editor > :first-child {
+.mx_MessageComposer_editor> :first-child {
     margin-top: 0 !important;
 }
-.mx_MessageComposer_editor > :last-child {
+
+.mx_MessageComposer_editor> :last-child {
     margin-bottom: 0 !important;
 }
 
 @keyframes visualbell {
-    from { background-color: $visual-bell-bg-color; }
-    to { background-color: $background; }
+    from {
+        background-color: $visual-bell-bg-color;
+    }
+
+    to {
+        background-color: $background;
+    }
 }
 
 .mx_MessageComposer_input_error {
@@ -166,15 +183,17 @@ limitations under the License.
     color: $accent;
     opacity: 1.0;
 }
+
 .mx_MessageComposer_input textarea::-webkit-input-placeholder {
     color: $accent;
 }
 
 .mx_MessageComposer_button_highlight {
     background: rgba($accent, 0.25);
+
     // make the icon the accent color too
     &::before {
-        background-color: $accent !important;
+        background-color: $accent  !important;
     }
 }
 
@@ -371,21 +390,7 @@ limitations under the License.
 .mx_MessageComposer.mx_MessageComposer--compact {
     margin-right: 0;
 
-    .mx_MessageComposer_wrapper {
-        padding: 0 0 0 25px;
-    }
-
-    &:not(.mx_MessageComposer_e2eStatus) {
-        .mx_MessageComposer_wrapper {
-            padding: 0;
-        }
-    }
-
     .mx_MessageComposer_button:last-child {
         margin-right: 0;
-    }
-
-    .mx_MessageComposer_e2eIcon {
-        left: 0;
     }
 }
