remove debug, fix mouseout
Signed-off-by: Kerry Archibald <kerrya@element.io>

--- a/res/css/components/views/beacon/_BeaconStatusTooltip.scss
+++ b/res/css/components/views/beacon/_BeaconStatusTooltip.scss
@@ -16,17 +16,22 @@ limitations under the License.
 
 .mx_BeaconStatusTooltip {
     position: absolute;
+    top: 42px;
     max-width: 150px;
     height: 38px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    bottom: -44px;
-    margin-top: $spacing-4;
-    background: $menu-bg-color;
-    box-shadow: 4px 4px 12px 0 $menu-box-shadow-color;
+    box-sizing: content-box;
+    padding-top: $spacing-8;
 
     // override copyable text style to make compact
     .mx_CopyableText_copyButton {
         margin-left: 0 !important;
     }
+}
+
+.mx_BeaconStatusTooltip_inner {
+    position: relative;
+    height: 100%;
+    border-radius: 4px;
+    background: $menu-bg-color;
+    box-shadow: 4px 4px 12px 0 $menu-box-shadow-color;
 }
