--- a/res/css/views/auth/_AuthBody.scss
+++ b/res/css/views/auth/_AuthBody.scss
@@ -146,7 +146,7 @@ limitations under the License.
     }
 
     &.mx_AuthBody_changeFlow_signIn {
-        margin: 6px auto 0;
+        margin: 6px auto 0; // TODO: Use a spacing variable
     }
 }
 
