--- a/res/css/views/auth/_CaptchaForm.scss
+++ b/res/css/views/auth/_CaptchaForm.scss
@@ -17,6 +17,6 @@ limitations under the License.
 .mx_CaptchaForm_recaptchaContainer {
     .mx_CaptchaForm_recaptchaContainer_info,
     .mx_CaptchaForm_recaptchaContainer_error {
-        margin: 12px auto;
+        margin: $spacing-12 auto;
     }
 }
