--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -96,6 +96,10 @@ limitations under the License.
         .mx_EventTile_line {
             padding-top: var(--BaseCard_EventTile_line-padding-block);
             padding-bottom: var(--BaseCard_EventTile_line-padding-block);
+
+            .mx_EventTile_e2eIcon {
+                inset-inline-start: 8px;
+            }
         }
 
         &.mx_EventTile_info {
