Center initial letter
Signed-off-by: Šimon Brandner <simon.bra.ag@gmail.com>

--- a/res/css/views/elements/_Pill.scss
+++ b/res/css/views/elements/_Pill.scss
@@ -54,6 +54,7 @@ limitations under the License.
         align-items: center;
         border-radius: 10rem;
         margin-right: 0.24rem;
+        justify-content: center;
     }
 
     a& {
