Use PostCSS variables for spacing values
Co-authored-by: Michael Telatynski <7t3chguy@gmail.com>

--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -35,7 +35,7 @@ limitations under the License.
 
 .mx_MainSplit_timeline {
     .mx_MessageComposer_wrapper {
-        margin: 16px;
+        margin: $spacing-16;
     }
 }
 
