--- a/res/css/structures/_RightPanel.scss
+++ b/res/css/structures/_RightPanel.scss
@@ -32,8 +32,8 @@ limitations under the License.
     }
 
     .mx_MessageComposer_wrapper {
-        margin-top: 8px;
-        margin-bottom: 8px;
+        margin-top: $spacing-8;
+        margin-bottom: $spacing-8;
     }
 }
 
