--- a/res/css/views/auth/_InteractiveAuthEntryComponents.scss
+++ b/res/css/views/auth/_InteractiveAuthEntryComponents.scss
@@ -76,12 +76,18 @@ limitations under the License.
 }
 
 .mx_InteractiveAuthEntryComponents_emailWrapper {
+    // "Resend" button/link
     .mx_AccessibleButton_kind_link_inline {
+        // We need this to be an inline-block so positioning works correctly
         display: inline-block !important;
 
+        // Spinner as end adornment of the "resend" button/link
         .mx_Spinner {
+            // Spinners are usually block elements, but we need it as inline element
             display: inline-flex !important;
+            // Spinners by default fill all available width, but we don't want that
             width: auto !important;
+            // We need to center the spinner relative to the button/link
             vertical-align: middle !important;
         }
     }
