--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -46,8 +46,8 @@ limitations under the License.
         }
 
         // Mirror rough designs for "greyed out" text
-        &.mx_EventTile_contextual {
-            opacity: 0.7;
+        &.mx_EventTile_contextual .mx_EventTile_line {
+            opacity: 0.4;
         }
     }
 }
