--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -263,7 +263,6 @@ limitations under the License.
                 }
 
                 .mx_EventTile_avatar {
-                    top: 0; // Align with hidden event content
                     left: calc($MessageTimestamp_width + 14px - 4px); // 14px: avatar width, 4px: align with text
                     z-index: 9; // position above the hover styling
                 }
@@ -271,12 +270,15 @@ limitations under the License.
 
             &[data-layout=bubble] {
                 .mx_EventTile_avatar {
-                    left: 30px;
+                    inset-inline-start: 0;
                 }
             }
 
             .mx_EventTile_avatar {
                 position: absolute;
+                top: 1.5px; // Align with hidden event content
+                margin-top: 0;
+                margin-bottom: 0;
                 width: 14px; // avatar img size
                 height: 14px; // avatar img size
             }
