--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -197,6 +197,7 @@ limitations under the License.
 
         &:not([data-layout=bubble]) > .mx_EventTile_line {
             padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
+            padding-inline-end: var(--ThreadView_group_spacing-end); // align summary text with message text
         }
     }
 
