--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -139,7 +139,19 @@ limitations under the License.
         }
     }
 
-    &.mx_ThreadView .mx_ThreadView_timelinePanelWrapper {
+    &.mx_ThreadView {
+        // Inside a thread timeline only
+        .mx_GenericEventListSummary {
+            &[data-layout=bubble] > .mx_EventTile_line {
+            }
+
+            &:not([data-layout=bubble]) > .mx_EventTile_line {
+                padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
+                padding-inline-end: var(--ThreadView_group_spacing-end); // align summary text with message text
+            }
+        }
+
+        .mx_ThreadView_timelinePanelWrapper {
         position: relative;
         min-height: 0; // don't displace the composer
         flex-grow: 1;
@@ -147,6 +159,7 @@ limitations under the License.
         .mx_FileDropTarget {
             border-radius: 8px;
         }
+    }
     }
 
     .mx_RoomView_messagePanel { // To avoid the rule from being applied to .mx_ThreadPanel_empty
@@ -188,16 +201,6 @@ limitations under the License.
 
         &.mx_EventTile_clamp:hover {
             cursor: pointer;
-        }
-    }
-
-    .mx_GenericEventListSummary {
-        &[data-layout=bubble] > .mx_EventTile_line {
-        }
-
-        &:not([data-layout=bubble]) > .mx_EventTile_line {
-            padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
-            padding-inline-end: var(--ThreadView_group_spacing-end); // align summary text with message text
         }
     }
 
