--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -113,10 +113,12 @@ limitations under the License.
         }
     }
 
-    .mx_GenericEventListSummary:not([data-layout=bubble]) .mx_EventTile_line,
-    .mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_GenericEventListSummary_unstyledList > .mx_EventTile_info .mx_EventTile_avatar ~ .mx_EventTile_line {
-        padding-inline-start: var(--BaseCard_EventTile-spacing-horizontal);
-        padding-inline-end: var(--BaseCard_EventTile-spacing-horizontal);
+    .mx_GenericEventListSummary:not([data-layout=bubble]) {
+        .mx_EventTile_line,
+        > .mx_GenericEventListSummary_unstyledList > .mx_EventTile_info .mx_EventTile_avatar ~ .mx_EventTile_line {
+            padding-inline-start: var(--BaseCard_EventTile-spacing-horizontal);
+            padding-inline-end: var(--BaseCard_EventTile-spacing-horizontal);
+        }
     }
 
     .mx_ReadReceiptGroup {
