--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -608,11 +608,11 @@ limitations under the License.
     // Align with left edge of bubble tiles
     padding: 0 49px;
 }
-}
+
 
 // ideally we'd use display=contents here for the layout to all work regardless of the *ELS but
 // that breaks ScrollPanel's reliance upon offsetTop so we have to have a bit more finesse.
-.mx_GenericEventListSummary[data-expanded=true][data-layout=bubble] {
+&[data-expanded=true] {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -634,6 +634,8 @@ limitations under the License.
         }
     }
 }
+}
+
 
 // increase margin between ELS and the next Event to not have our user avatar overlap the expand/collapse button
 .mx_GenericEventListSummary[data-layout=bubble][data-expanded=false] + .mx_EventTile[data-layout=bubble][data-self=true] {
