Add support for disabling spell check
Signed-off-by: Šimon Brandner <simon.bra.ag@gmail.com>

--- a/res/css/views/settings/tabs/_SettingsTab.scss
+++ b/res/css/views/settings/tabs/_SettingsTab.scss
@@ -28,6 +28,7 @@ limitations under the License.
     color: $primary-content;
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-right: 100px;
 }
 
 .mx_SettingsTab_heading:nth-child(n + 2) {
@@ -41,6 +42,7 @@ limitations under the License.
     color: $primary-content;
     margin-bottom: 10px;
     margin-top: 12px;
+    margin-right: 100px;
 }
 
 .mx_SettingsTab_subsectionText {
