Include mx_EventTile_pendingModeration in mx_EventTile_content
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -388,14 +388,13 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     margin-left: 9px;
     cursor: pointer;
 }
-}
-
-.mx_EventTile_content .mx_EventTile_pendingModeration {
+.mx_EventTile_pendingModeration {
     user-select: none;
     font-size: $font-12px;
     color: $roomtopic-color;
     display: inline-block;
     margin-left: 9px;
+}
 }
 
 .mx_EventTile_e2eIcon {
