--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -411,14 +411,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         white-space: pre-wrap; // don't collapse spaces in inline code blocks
     }
 
-    pre code {
-        white-space: pre; // we want code blocks to be scrollable and not wrap
-
-        >* {
-            display: inline;
-        }
-    }
-
     pre {
         // have to use overlay rather than auto otherwise Linux and Windows
         // Chrome gets very confused about vertical spacing:
@@ -428,6 +420,14 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
         &::-webkit-scrollbar-corner {
             background: transparent;
+        }
+
+        code {
+            white-space: pre; // we want code blocks to be scrollable and not wrap
+
+            > * {
+                display: inline;
+            }
         }
     }
 }
