--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -135,6 +135,11 @@ $button-danger-fg-color: $primary-content;
 $button-danger-disabled-fg-color: $primary-content;
 // ********************
 
+// Dropdowns
+// ********************
+$dropdown-highlight-color: rgba($quaternary-content, 0.2);
+// ********************
+
 // Toggle switch
 // ********************
 $togglesw-off-color: $room-highlight-color;
