--- a/res/themes/legacy-dark/css/_legacy-dark.scss
+++ b/res/themes/legacy-dark/css/_legacy-dark.scss
@@ -156,6 +156,9 @@ $button-danger-fg-color: #ffffff;
 $button-danger-disabled-fg-color: #ffffff;
 $button-danger-disabled-bg-color: #f5b6bb; // TODO: Verify color
 
+// Dropdowns
+$dropdown-highlight-color: rgba($quaternary-content, 0.2);
+
 // Toggle switch
 $togglesw-off-color: $room-highlight-color;
 
