--- a/res/themes/light/css/_light.scss
+++ b/res/themes/light/css/_light.scss
@@ -216,6 +216,11 @@ $button-danger-disabled-fg-color: $background;
 $button-danger-disabled-bg-color: #f5b6bb; // TODO: Verify color
 // ********************
 
+// Dropdowns
+// ********************
+$dropdown-highlight-color: rgba($quaternary-content, 0.2);
+// ********************
+
 // Toggle switch
 // ********************
 $togglesw-off-color: #c1c9d6;
