--- a/res/themes/legacy-light/css/_legacy-light.scss
+++ b/res/themes/legacy-light/css/_legacy-light.scss
@@ -234,6 +234,9 @@ $button-danger-fg-color: #ffffff;
 $button-danger-disabled-fg-color: #ffffff;
 $button-danger-disabled-bg-color: #f5b6bb; // TODO: Verify color
 
+// Dropdowns
+$dropdown-highlight-color: rgba($quaternary-content, 0.2);
+
 $visual-bell-bg-color: #faa;
 
 // Toggle switch
