Correct the border color of dropdowns

--- a/res/css/views/elements/_Dropdown.scss
+++ b/res/css/views/elements/_Dropdown.scss
@@ -30,7 +30,7 @@ limitations under the License.
     align-items: center;
     position: relative;
     border-radius: 8px;
-    border: 1px solid $strong-input-border-color;
+    border: 1px solid $quinary-content;
     padding: $spacing-8 $spacing-12;
     font-size: $font-15px;
     line-height: $font-24px;
