Adjust EditMessageComposer style declarations
- "max-width: 100%" to avoid flexbox from overflowing
- "flex-flow: row wrap-reverse" to display "Save" over "Cancel" button
- "margin-inline-start: auto" to move those buttons to the right side
- "flex: 1" to set the same width for the buttons
- "min-width: 100px" to align the edge of the button with text area

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -65,6 +65,11 @@ limitations under the License.
 
     .mx_EventTile_content {
         margin-right: 0;
+
+        &.mx_EditMessageComposer {
+            // Make sure the formatting bar is visible
+            overflow: visible;
+        }
     }
 
     &.mx_EventTile_continuation {
