Replace fit-content with auto for width property
Also move mx_EditMessageComposer overflow declaration from _EventBubbleTile.scss to _EventTile.scss

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EditMessageComposer.scss
+++ b/res/css/views/rooms/_EditMessageComposer.scss
@@ -19,7 +19,7 @@ limitations under the License.
     display: flex;
     flex-direction: column;
     max-width: 100%; // disable overflow
-    width: fit-content;
+    width: auto;
     gap: 5px;
     padding: 3px;
 
