--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -54,9 +54,13 @@ limitations under the License.
     .mx_EventTile:not([data-layout="bubble"]) {
         $left-gutter: 36px;
 
-        .mx_EventTile_line {
+        .mx_EventTile_line,
+        &.mx_EventTile_info .mx_EventTile_line {
             padding-inline-start: $left-gutter;
             padding-inline-end: 36px;
+        }
+
+        .mx_EventTile_line {
             padding-top: var(--BaseCard_EventTile_line-padding-block);
             padding-bottom: var(--BaseCard_EventTile_line-padding-block);
 
@@ -100,10 +104,6 @@ limitations under the License.
         }
 
         &.mx_EventTile_info {
-            .mx_EventTile_line {
-                padding-left: $left-gutter;
-            }
-
             .mx_EventTile_avatar {
                 left: 18px;
             }
