--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -80,7 +80,7 @@ limitations under the License.
             }
 
             .mx_ReactionsRow {
-                padding: 0;
+                padding-inline: 0;
 
                 // See margin setting of ReactionsRow on _EventTile.scss
                 margin-right: 8px;
