--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -80,10 +80,7 @@ limitations under the License.
             }
 
             .mx_ReactionsRow {
-                padding-inline: 0;
-
-                // See margin setting of ReactionsRow on _EventTile.scss
-                margin-right: 8px;
+                margin-inline-end: $spacing-8; // See: var(--ThreadView_group_spacing-end) for ReactionsRow on _EventTile.scss
             }
 
             .mx_ThreadSummary {
