--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -53,9 +53,12 @@ limitations under the License.
 }
 
 .mx_EventTile[data-layout=bubble] {
+    --EventTile_bubble-margin-inline-start: 49px;
+    --EventTile_bubble-margin-inline-end: 60px;
+
     position: relative;
     margin-top: var(--gutterSize);
-    margin-left: 49px;
+    margin-left: var(--EventTile_bubble-margin-inline-start);
     font-size: $font-14px;
 
     .mx_ThreadSummary {
@@ -89,8 +92,8 @@ limitations under the License.
         position: absolute;
         top: -1px;
         bottom: -1px;
-        left: -60px;
-        right: -60px;
+        left: calc(-1 * var(--EventTile_bubble-margin-inline-start));
+        right: calc(-1 * var(--EventTile_bubble-margin-inline-end));
         z-index: -1;
         border-radius: 4px;
     }
