--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -965,6 +965,15 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
             margin-inline-start: var(--BaseCard_EventTile-spacing-horizontal);
             margin-inline-end: var(--BaseCard_EventTile-spacing-horizontal);
 
+            &::before {
+                inset-inline: calc(-1 * var(--BaseCard_EventTile-spacing-horizontal));
+                z-index: auto; // enable background color on hover
+            }
+
+            .mx_ReactionsRow {
+                position: relative; // display on hover
+            }
+
             .mx_EventTile_line.mx_EventTile_mediaLine {
                 padding-block: 0;
                 padding-inline-start: 0;
