--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -506,24 +506,25 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         mask-position: center;
         mask-size: 80%;
     }
-}
 
-.mx_EventTile_e2eIcon_warning {
+    &.mx_EventTile_e2eIcon_warning,
+    &.mx_EventTile_e2eIcon_normal {
+        opacity: 1;
+    }
+
+&.mx_EventTile_e2eIcon_warning {
     &::after {
         mask-image: url('$(res)/img/e2e/warning.svg');
         background-color: $alert;
     }
-
-    opacity: 1;
 }
 
-.mx_EventTile_e2eIcon_normal {
+&.mx_EventTile_e2eIcon_normal {
     &::after {
         mask-image: url('$(res)/img/e2e/normal.svg');
         background-color: $header-panel-text-primary-color;
     }
-
-    opacity: 1;
+}
 }
 
 /* Various markdown overrides */
