Group '.mx_EventTile_collapseButton' and '.mx_EventTile_expandButton'
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -601,17 +601,18 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     mask-image: url($copy-button-url);
 }
 
-&.mx_EventTile_collapseButton {
-    mask-size: 75%;
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-image: url("$(res)/img/element-icons/minimise-collapse.svg");
-}
-
+&.mx_EventTile_collapseButton,
 &.mx_EventTile_expandButton {
     mask-size: 75%;
     mask-position: center;
     mask-repeat: no-repeat;
+}
+
+&.mx_EventTile_collapseButton {
+    mask-image: url("$(res)/img/element-icons/minimise-collapse.svg");
+}
+
+&.mx_EventTile_expandButton {
     mask-image: url("$(res)/img/element-icons/maximise-expand.svg");
 }
 }
