--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -617,13 +617,15 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 }
 }
 
-.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_copyButton,
-.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_copyButton,
-.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_collapseButton,
-.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_collapseButton,
-.mx_EventTile_body .mx_EventTile_pre_container:focus-within .mx_EventTile_expandButton,
-.mx_EventTile_body .mx_EventTile_pre_container:hover .mx_EventTile_expandButton {
+.mx_EventTile_body .mx_EventTile_pre_container {
+    &:focus-within .mx_EventTile_copyButton,
+    &:hover .mx_EventTile_copyButton,
+    &:focus-within .mx_EventTile_collapseButton,
+    &:hover .mx_EventTile_collapseButton,
+    &:focus-within .mx_EventTile_expandButton,
+    &:hover .mx_EventTile_expandButton {
     visibility: visible;
+}
 }
 
 /* end of overrides */
