Group '.mx_EventTile_collapseButton'
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -621,13 +621,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     &:focus-within,
     &:hover {
         .mx_EventTile_copyButton,
-        .mx_EventTile_collapseButton {
-            visibility: visible;
-        }
-    }
-
-    &:focus-within,
-    &:hover {
+        .mx_EventTile_collapseButton,
         .mx_EventTile_expandButton {
             visibility: visible;
         }
