--- a/res/css/views/context_menus/_MessageContextMenu.scss
+++ b/res/css/views/context_menus/_MessageContextMenu.scss
@@ -111,6 +111,6 @@ limitations under the License.
     }
 
     .mx_MessageContextMenu_jumpToEvent::before {
-        mask-image: url('$(res)/img/element-icons/link.svg');
+        mask-image: url('$(res)/img/element-icons/left-arrow.svg');
     }
 }
