Remove max-height with !important
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MImageBody.scss
+++ b/res/css/views/messages/_MImageBody.scss
@@ -68,8 +68,7 @@ $timeline-image-border-radius: 8px;
         justify-content: center;
         align-items: center;
 
-        // Override inline height and width values to avoid overflow
-        max-height: 100% !important;
+        // Override inline max-width value to avoid overflow
         max-width: 100% !important;
 
         .mx_MImageBody_thumbnail {
